apps/headscale-admin/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: headscale-admin
spec:
  forwardAuth:
    address: http://authelia.authelia.svc.cluster.local:9091/api/verify?rd=https://auth.lab.jackhumes.com/
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-admin
  namespace: headscale-admin
spec:
  redirectRegex:
    regex: "^https://headscale-admin.lab.jackhumes.com/$"
    replacement: "https://headscale-admin.lab.jackhumes.com/admin/"
    permanent: false
