apps/headscale-admin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale-admin
  namespace: headscale-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale-admin
  template:
    metadata:
      labels:
        app: headscale-admin
    spec:
      containers:
        - name: headscale-admin
          image: goodieshq/headscale-admin:0.26.0
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
